feat(api): return created album location
