# docs/swagger.yaml
@@ -74,6 +74,10 @@ paths:
       responses:
         "201":
           description: Created
+          headers:
+            Location:
+              description: Canonical URL of the created album
+              type: string
           schema:
             $ref: '#/definitions/main.album'
         "400":
